# game-of-life

./: CMakeLists.txt  main.cpp
